# nexus_4wd_mecanum_gazebo

./: CMakeLists.txt  README.md  package.xml
include/nexus_4wd_mecanum_gazebo/: nexus_ros_force_based_move.h
launch/: mecanum.launch.py  nav2.launch.py
src/: nexus_ros_force_based_move.cpp
